# VOICE-CHAT-WITH-PDF

Backend/: chain.py  main.py  pyproject.toml
Frontend/: package-lock.json
Frontend/src/app/: page.tsx
